--- a/Lec14/ToDoApp/index.html
+++ b/Lec14/ToDoApp/index.html
@@ -26,9 +26,9 @@
         </span>
       </li>
 
-      <li class="todo-item completed">
+      <li class="todo-item">
         <input type="checkbox" class="btn-complete"> </input>
-        <span class="todo-text"> Completed task example</span>
+        <span class="todo-text completed"> Completed task example</span>
         <span class="todo-actions">
           <button class="btn-delete" >✖</button>
         </span>
